--- a/EcCon.ipynb
+++ b/EcCon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Tarea:\n",
-    "### Ecuaciones matriciales para ajuste de una base de calibración\n",
+    "### Ajuste de una base de calibración\n",
     "\n",
     "#### De la Rosa Peredo Carlos Raúl"
    ]
@@ -57,45 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Definimos la función que se va a encargar de crear las ecuaciones de condición\n",
-    "# n es la cantidad de puntos\n",
-    "\n",
-    "def filec2(ini,n):\n",
-    "    \n",
-    "    df=cols(n)\n",
-    "    df=df.append(pd.DataFrame([np.repeat(1,len(df.columns))],columns=df.columns))\n",
-    "    \n",
-    "    ecs=cols(n)\n",
-    "    ix=ini.find('-')\n",
-    "    fin=ini[:ix]+'-'+str(n)\n",
-    "    cof=[df[ini][0],-df[fin][0]]\n",
-    "    col=[ini,fin]\n",
-    "\n",
-    "    while int(ini[ix+1:])!=n:\n",
-    "        ix=ini.find('-')\n",
-    "        xi=int(ini[:ix])\n",
-    "        xf=int(ini[ix+1:])\n",
-    "        ini=str(xf)+'-'+str(xf+1)\n",
-    "        if (xi==n-1) and (xf==n):\n",
-    "            break\n",
-    "        else:\n",
-    "            cof.append(df[ini][0])\n",
-    "            col.append(ini)\n",
-    "\n",
-    "\n",
-    "\n",
-    "    ecs=ecs.append(pd.DataFrame(data=[cof],columns=col))    \n",
-    "\n",
-    "    return ecs.fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +268,7 @@
        "5   0   0   1  -1   0   0   0   0   0   1"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +526,7 @@
        "9   0   0   0   1  -1   0   0   0   0   0   0   0   0   0   1"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3985,10 +3947,295 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>segmento</th>\n",
+       "      <th>distancia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ab</td>\n",
+       "      <td>100.004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ac</td>\n",
+       "      <td>200.020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ad</td>\n",
+       "      <td>300.025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ae</td>\n",
+       "      <td>400.015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>af</td>\n",
+       "      <td>500.010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>ik</td>\n",
+       "      <td>200.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>il</td>\n",
+       "      <td>300.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>jk</td>\n",
+       "      <td>99.991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>jl</td>\n",
+       "      <td>200.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>kl</td>\n",
+       "      <td>100.008</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>66 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   segmento   distancia\n",
+       "0         ab    100.004\n",
+       "1         ac    200.020\n",
+       "2         ad    300.025\n",
+       "3         ae    400.015\n",
+       "4         af    500.010\n",
+       "..       ...        ...\n",
+       "61        ik    200.000\n",
+       "62        il    300.000\n",
+       "63        jk     99.991\n",
+       "64        jl    200.000\n",
+       "65        kl    100.008\n",
+       "\n",
+       "[66 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seg=pd.read_csv('/Users/Raul/Desktop/Tarea12.csv')\n",
+    "seg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "B=np.array(matr(12), dtype='float')\n",
+    "L=np.array(seg.distancia, dtype='float')\n",
+    "W=np.repeat(0,len(B))-np.dot(B,L)\n",
+    "\n",
+    "sol=np.dot(np.dot(B.transpose(),np.linalg.inv(np.dot(B,B.transpose()))),W)\n",
+    "Laj=np.round(L+sol,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seg['Ajuste']=np.round(sol,3)\n",
+    "seg['DistAj']=Laj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>segmento</th>\n",
+       "      <th>distancia</th>\n",
+       "      <th>Ajuste</th>\n",
+       "      <th>DistAj</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ab</td>\n",
+       "      <td>100.004</td>\n",
+       "      <td>-0.008</td>\n",
+       "      <td>99.996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ac</td>\n",
+       "      <td>200.020</td>\n",
+       "      <td>-0.011</td>\n",
+       "      <td>200.009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ad</td>\n",
+       "      <td>300.025</td>\n",
+       "      <td>-0.018</td>\n",
+       "      <td>300.007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ae</td>\n",
+       "      <td>400.015</td>\n",
+       "      <td>-0.007</td>\n",
+       "      <td>400.008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>af</td>\n",
+       "      <td>500.010</td>\n",
+       "      <td>-0.001</td>\n",
+       "      <td>500.009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>ik</td>\n",
+       "      <td>200.000</td>\n",
+       "      <td>-0.005</td>\n",
+       "      <td>199.995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>il</td>\n",
+       "      <td>300.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>300.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>jk</td>\n",
+       "      <td>99.991</td>\n",
+       "      <td>0.008</td>\n",
+       "      <td>99.999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>jl</td>\n",
+       "      <td>200.000</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>200.004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>kl</td>\n",
+       "      <td>100.008</td>\n",
+       "      <td>-0.003</td>\n",
+       "      <td>100.005</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>66 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   segmento   distancia  Ajuste   DistAj\n",
+       "0         ab    100.004  -0.008   99.996\n",
+       "1         ac    200.020  -0.011  200.009\n",
+       "2         ad    300.025  -0.018  300.007\n",
+       "3         ae    400.015  -0.007  400.008\n",
+       "4         af    500.010  -0.001  500.009\n",
+       "..       ...        ...     ...      ...\n",
+       "61        ik    200.000  -0.005  199.995\n",
+       "62        il    300.000   0.000  300.000\n",
+       "63        jk     99.991   0.008   99.999\n",
+       "64        jl    200.000   0.004  200.004\n",
+       "65        kl    100.008  -0.003  100.005\n",
+       "\n",
+       "[66 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seg.to_excel(\"Resultado.xlsx\",index=False) "
+   ]
   }
  ],
  "metadata": {
