Added another method

--- a/EcCon.ipynb
+++ b/EcCon.ipynb
@@ -20,11 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -33,12 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 1060,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Definimos una función que genera un dataframe donde cada columna correspondera al segmento.\n",
@@ -66,11 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Definimos la funcón que va a reellanar mi tabla de ecuaciones\n",
@@ -96,11 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Definimos la función que se va a encargar de crear las ecuaciones de condición\n",
@@ -4008,12 +3992,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 1199,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4118,24 +4098,20 @@
        "[66 rows x 2 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 1199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seg=pd.read_csv('/Users/Raul/Desktop/Tarea12.csv')\n",
+    "seg=pd.read_csv('/Users/Raul/Desktop/Sexto/CA/Tarea12.csv')\n",
     "seg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 1200,
+   "metadata": {},
    "outputs": [],
    "source": [
     "B=np.array(matr(12), dtype='float')\n",
@@ -4148,12 +4124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 1201,
+   "metadata": {},
    "outputs": [],
    "source": [
     "seg['Ajuste']=np.round(sol,3)\n",
@@ -4162,12 +4134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 1202,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4296,7 +4264,7 @@
        "[66 rows x 4 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 1202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5046,6 +5014,569 @@
    "outputs": [],
    "source": [
     "med.to_excel(\"Resultado2.xlsx\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ecuaciones de observación"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cols2(n):  \n",
+    "    pts=np.arange(1,n)\n",
+    "    cols=[]\n",
+    "\n",
+    "    for i in range(len(pts)):\n",
+    "        \n",
+    "        cols.append('p'+str(i+1))\n",
+    "                \n",
+    "    return pd.DataFrame(columns=cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Algoritmo para la generación de la matriz de ecuaciones de condición\n",
+    "\n",
+    "### La n corresponde a la cantidad de puntos (incognitas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mati(n):\n",
+    "    dd=cols2(n)\n",
+    "    cl=dd.shape[1]\n",
+    "    for i in range(cl):\n",
+    "\n",
+    "\n",
+    "        l=np.zeros(dd.shape[1])\n",
+    "        l[i]=1\n",
+    "\n",
+    "\n",
+    "        dd=dd.append(pd.DataFrame(data=[l],columns=dd.columns))\n",
+    "\n",
+    "    rl=len(cols(n).columns)-dd.shape[0]\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    tt=cols2(n)\n",
+    "    \n",
+    "    for i in range(rl-1):\n",
+    "\n",
+    "        #print(i)\n",
+    "        l=np.zeros(dd.shape[1])\n",
+    "\n",
+    "\n",
+    "        try:\n",
+    "            l[i+1]=1\n",
+    "        except:\n",
+    "            break\n",
+    "\n",
+    "        for j in range(i+1):\n",
+    "            l[j]=-1\n",
+    "\n",
+    "\n",
+    "            if i>0:\n",
+    "                l=np.zeros(dd.shape[1])\n",
+    "                l[i+1]=1\n",
+    "                l[j]=-1\n",
+    "\n",
+    "            tt=tt.append(pd.DataFrame(data=[l],columns=dd.columns))\n",
+    "    \n",
+    "    cc=list(dd.columns)\n",
+    "    xx=cols2(n)\n",
+    "    for m in cc:\n",
+    "        od=tt[tt[m]==-1]\n",
+    "        xx=xx.append(od.sort_values(by=m,ascending = True).reset_index(drop=True))\n",
+    "    \n",
+    "    \n",
+    "    dd=dd.append(xx)\n",
+    "    \n",
+    "    return dd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1207,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p1</th>\n",
+       "      <th>p2</th>\n",
+       "      <th>p3</th>\n",
+       "      <th>p4</th>\n",
+       "      <th>p5</th>\n",
+       "      <th>p6</th>\n",
+       "      <th>p7</th>\n",
+       "      <th>p8</th>\n",
+       "      <th>p9</th>\n",
+       "      <th>p10</th>\n",
+       "      <th>p11</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>66 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     p1   p2   p3   p4   p5   p6   p7   p8   p9  p10  p11\n",
+       "0   1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "0   0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "0   0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "0   0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "0   0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "..  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...\n",
+       "1   0.0  0.0  0.0  0.0  0.0  0.0  0.0 -1.0  0.0  1.0  0.0\n",
+       "2   0.0  0.0  0.0  0.0  0.0  0.0  0.0 -1.0  0.0  0.0  1.0\n",
+       "0   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 -1.0  1.0  0.0\n",
+       "1   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 -1.0  0.0  1.0\n",
+       "0   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 -1.0  1.0\n",
+       "\n",
+       "[66 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 1207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Matriz A de ecuaciones de condición\n",
+    "\n",
+    "mm=mati(12)\n",
+    "mm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 100.004,  200.02 ,  300.025,  400.015,  500.01 ,  600.04 ,\n",
+       "        699.991,  799.981,  900.004, 1000.001, 1100.   ,  100.002,\n",
+       "        199.996,  300.025,  400.025,  500.004,  600.008,  700.009,\n",
+       "        800.01 ,  900.011, 1000.05 ,  100.   ,  200.021,  300.   ,\n",
+       "        400.   ,  500.013,  600.   ,  700.   ,  799.988,  899.985,\n",
+       "        100.   ,  200.   ,  300.   ,  400.   ,  500.032,  600.   ,\n",
+       "        700.   ,  800.   ,  100.   ,  200.045,  300.   ,  400.001,\n",
+       "        500.   ,  600.005,  700.   ,   99.999,  200.023,  300.   ,\n",
+       "        400.   ,  500.   ,  600.   ,  100.007,  200.008,  300.   ,\n",
+       "        400.   ,  500.009,  100.   ,  200.   ,  300.   ,  400.   ,\n",
+       "         99.981,  200.   ,  300.   ,   99.991,  200.   ,  100.008])"
+      ]
+     },
+     "execution_count": 1210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Matriz M de distancias a ajustar\n",
+    "\n",
+    "M=np.array(seg.distancia)\n",
+    "M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  99.99625   ,  200.00883333,  300.00666667,  400.00841667,\n",
+       "        500.00866667,  600.01291667,  700.01108333,  800.01175   ,\n",
+       "        900.00791667, 1000.00658333, 1100.01191667])"
+      ]
+     },
+     "execution_count": 1195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A=np.array(mm)\n",
+    "\n",
+    "x=np.linalg.inv(np.dot(A.T,A))\n",
+    "p=np.dot(A.T,M)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1208,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Raul/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "ss=seg[seg['segmento '].str[0]=='a']\n",
+    "ss['ajuEcCon']=np.round(np.dot(x,p),3)\n",
+    "ss=ss.rename(columns={'DistAj':'AjuCon'})\n",
+    "ss=ss.drop(columns='Ajuste')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Resultado y comparación con el mètodo de condición"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>segmento</th>\n",
+       "      <th>distancia</th>\n",
+       "      <th>AjuCon</th>\n",
+       "      <th>ajuEcCon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ab</td>\n",
+       "      <td>100.004</td>\n",
+       "      <td>99.996</td>\n",
+       "      <td>99.996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ac</td>\n",
+       "      <td>200.020</td>\n",
+       "      <td>200.009</td>\n",
+       "      <td>200.009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ad</td>\n",
+       "      <td>300.025</td>\n",
+       "      <td>300.007</td>\n",
+       "      <td>300.007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ae</td>\n",
+       "      <td>400.015</td>\n",
+       "      <td>400.008</td>\n",
+       "      <td>400.008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>af</td>\n",
+       "      <td>500.010</td>\n",
+       "      <td>500.009</td>\n",
+       "      <td>500.009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ag</td>\n",
+       "      <td>600.040</td>\n",
+       "      <td>600.013</td>\n",
+       "      <td>600.013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ah</td>\n",
+       "      <td>699.991</td>\n",
+       "      <td>700.011</td>\n",
+       "      <td>700.011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ai</td>\n",
+       "      <td>799.981</td>\n",
+       "      <td>800.012</td>\n",
+       "      <td>800.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>aj</td>\n",
+       "      <td>900.004</td>\n",
+       "      <td>900.008</td>\n",
+       "      <td>900.008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ak</td>\n",
+       "      <td>1000.001</td>\n",
+       "      <td>1000.007</td>\n",
+       "      <td>1000.007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>al</td>\n",
+       "      <td>1100.000</td>\n",
+       "      <td>1100.012</td>\n",
+       "      <td>1100.012</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   segmento   distancia    AjuCon  ajuEcCon\n",
+       "0         ab    100.004    99.996    99.996\n",
+       "1         ac    200.020   200.009   200.009\n",
+       "2         ad    300.025   300.007   300.007\n",
+       "3         ae    400.015   400.008   400.008\n",
+       "4         af    500.010   500.009   500.009\n",
+       "5         ag    600.040   600.013   600.013\n",
+       "6         ah    699.991   700.011   700.011\n",
+       "7         ai    799.981   800.012   800.012\n",
+       "8         aj    900.004   900.008   900.008\n",
+       "9         ak   1000.001  1000.007  1000.007\n",
+       "10        al   1100.000  1100.012  1100.012"
+      ]
+     },
+     "execution_count": 1209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### El resultado es exactamente el mismo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ss.to_excel(\"RCon.xlsx\",index=False) "
    ]
   },
   {
